bin/console/src/snapshots/chaos_console__history_cell__tests__active_mcp_tool_call_snapshot.snap
---
source: bin/console/src/history_cell.rs
expression: rendered
---
• Calling search.find_docs({"query":"ratatui styling","limit":3})
