bin/console/src/snapshots/chaos_console__history_cell__tests__coalesces_sequential_reads_within_one_call.snap
---
source: bin/console/src/history_cell.rs
expression: rendered
---
• Explored
  └ Search shimmer_spans
    Read shimmer.rs
    Read status_indicator_widget.rs
