bin/console/src/snapshots/chaos_console__history_cell__tests__completed_mcp_tool_call_multiple_outputs_inline_snapshot.snap
---
source: bin/xserver/src/history_cell.rs
expression: rendered
---
• Called metrics.summary({"metric":"trace.latency","window":"15m"})
  └ Latency summary: p50=120ms, p95=480ms.
    No anomalies detected.
