bin/console/src/snapshots/chaos_console__history_cell__tests__error_event_oversized_input_snapshot.snap
---
source: bin/console/src/history_cell.rs
expression: rendered
---
■ Message exceeds the maximum length of 1048576 characters (1048577 provided).
